--- a/result/2021-12-31.md
+++ b/result/2021-12-31.md
@@ -1,7 +1,7 @@
 1. [2021年度十大热词公布](https://s.weibo.com//weibo?q=%232021%E5%B9%B4%E5%BA%A6%E5%8D%81%E5%A4%A7%E7%83%AD%E8%AF%8D%E5%85%AC%E5%B8%83%23&Refer=top) 1298674
 2. [现代版富春山居图](https://s.weibo.com//weibo?q=%23%E7%8E%B0%E4%BB%A3%E7%89%88%E5%AF%8C%E6%98%A5%E5%B1%B1%E5%B1%85%E5%9B%BE%23&Refer=top) 1180221
 3. [江歌母亲诉刘鑫生命权纠纷案31日开庭宣判](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E6%AD%8C%E6%AF%8D%E4%BA%B2%E8%AF%89%E5%88%98%E9%91%AB%E7%94%9F%E5%91%BD%E6%9D%83%E7%BA%A0%E7%BA%B7%E6%A1%8831%E6%97%A5%E5%BC%80%E5%BA%AD%E5%AE%A3%E5%88%A4%23&Refer=top) 988497
-4. [2021的最后一天](https://s.weibo.com//weibo?q=%232021%E7%9A%84%E6%9C%80%E5%90%8E%E4%B8%80%E5%A4%A9%23&Refer=top) 827732
+4. [2021的最后一天](https://s.weibo.com//weibo?q=%232021%E7%9A%84%E6%9C%80%E5%90%8E%E4%B8%80%E5%A4%A9%23&Refer=top) 873980
 5. [原来这才是正确的睡姿](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E8%BF%99%E6%89%8D%E6%98%AF%E6%AD%A3%E7%A1%AE%E7%9A%84%E7%9D%A1%E5%A7%BF%23&Refer=top) 765691
 6. [当男朋友是北大学生](https://s.weibo.com//weibo?q=%23%E5%BD%93%E7%94%B7%E6%9C%8B%E5%8F%8B%E6%98%AF%E5%8C%97%E5%A4%A7%E5%AD%A6%E7%94%9F%23&Refer=top) 740067
 7. [女生睡醒发现宿舍只剩自己一人](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E7%94%9F%E7%9D%A1%E9%86%92%E5%8F%91%E7%8E%B0%E5%AE%BF%E8%88%8D%E5%8F%AA%E5%89%A9%E8%87%AA%E5%B7%B1%E4%B8%80%E4%BA%BA%23&Refer=top) 673767
@@ -43,3 +43,4 @@
 43. [还以为是个普通的烟花](https://s.weibo.com//weibo?q=%23%E8%BF%98%E4%BB%A5%E4%B8%BA%E6%98%AF%E4%B8%AA%E6%99%AE%E9%80%9A%E7%9A%84%E7%83%9F%E8%8A%B1%23&Refer=top) 136577
 44. [张信哲被举报代言赌博平台](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E4%BF%A1%E5%93%B2%E8%A2%AB%E4%B8%BE%E6%8A%A5%E4%BB%A3%E8%A8%80%E8%B5%8C%E5%8D%9A%E5%B9%B3%E5%8F%B0%23&Refer=top) 124904
 45. [2021重新出发](https://s.weibo.com//weibo?q=2021%E9%87%8D%E6%96%B0%E5%87%BA%E5%8F%91&Refer=top) 104082
+46. [夫妻购物pk大赛](https://s.weibo.com//weibo?q=%E5%A4%AB%E5%A6%BB%E8%B4%AD%E7%89%A9pk%E5%A4%A7%E8%B5%9B&Refer=top) 72016
