--- a/result/2021-12-31.md
+++ b/result/2021-12-31.md
@@ -44,3 +44,4 @@
 44. [张信哲被举报代言赌博平台](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E4%BF%A1%E5%93%B2%E8%A2%AB%E4%B8%BE%E6%8A%A5%E4%BB%A3%E8%A8%80%E8%B5%8C%E5%8D%9A%E5%B9%B3%E5%8F%B0%23&Refer=top) 124904
 45. [2021重新出发](https://s.weibo.com//weibo?q=2021%E9%87%8D%E6%96%B0%E5%87%BA%E5%8F%91&Refer=top) 104082
 46. [夫妻购物pk大赛](https://s.weibo.com//weibo?q=%E5%A4%AB%E5%A6%BB%E8%B4%AD%E7%89%A9pk%E5%A4%A7%E8%B5%9B&Refer=top) 83192
+47. [美国疫情地图几乎全红了](https://s.weibo.com//weibo?q=%E7%BE%8E%E5%9B%BD%E7%96%AB%E6%83%85%E5%9C%B0%E5%9B%BE%E5%87%A0%E4%B9%8E%E5%85%A8%E7%BA%A2%E4%BA%86&Refer=top) 63084
