--- a/result/2021-12-31.md
+++ b/result/2021-12-31.md
@@ -42,6 +42,7 @@
 42. [2021热梗大赏](https://s.weibo.com//weibo?q=%232021%E7%83%AD%E6%A2%97%E5%A4%A7%E8%B5%8F%23&Refer=top) 163298
 43. [还以为是个普通的烟花](https://s.weibo.com//weibo?q=%23%E8%BF%98%E4%BB%A5%E4%B8%BA%E6%98%AF%E4%B8%AA%E6%99%AE%E9%80%9A%E7%9A%84%E7%83%9F%E8%8A%B1%23&Refer=top) 136577
 44. [张信哲被举报代言赌博平台](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E4%BF%A1%E5%93%B2%E8%A2%AB%E4%B8%BE%E6%8A%A5%E4%BB%A3%E8%A8%80%E8%B5%8C%E5%8D%9A%E5%B9%B3%E5%8F%B0%23&Refer=top) 124904
-45. [2021重新出发](https://s.weibo.com//weibo?q=2021%E9%87%8D%E6%96%B0%E5%87%BA%E5%8F%91&Refer=top) 104082
-46. [夫妻购物pk大赛](https://s.weibo.com//weibo?q=%E5%A4%AB%E5%A6%BB%E8%B4%AD%E7%89%A9pk%E5%A4%A7%E8%B5%9B&Refer=top) 83192
-47. [美国疫情地图几乎全红了](https://s.weibo.com//weibo?q=%E7%BE%8E%E5%9B%BD%E7%96%AB%E6%83%85%E5%9C%B0%E5%9B%BE%E5%87%A0%E4%B9%8E%E5%85%A8%E7%BA%A2%E4%BA%86&Refer=top) 63084
+45. [美国疫情地图几乎全红了](https://s.weibo.com//weibo?q=%E7%BE%8E%E5%9B%BD%E7%96%AB%E6%83%85%E5%9C%B0%E5%9B%BE%E5%87%A0%E4%B9%8E%E5%85%A8%E7%BA%A2%E4%BA%86&Refer=top) 118354
+46. [2021重新出发](https://s.weibo.com//weibo?q=2021%E9%87%8D%E6%96%B0%E5%87%BA%E5%8F%91&Refer=top) 104082
+47. [夫妻购物pk大赛](https://s.weibo.com//weibo?q=%E5%A4%AB%E5%A6%BB%E8%B4%AD%E7%89%A9pk%E5%A4%A7%E8%B5%9B&Refer=top) 83192
+48. [男子盗窃虐打哈士奇被判拘役3个月](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E7%9B%97%E7%AA%83%E8%99%90%E6%89%93%E5%93%88%E5%A3%AB%E5%A5%87%E8%A2%AB%E5%88%A4%E6%8B%98%E5%BD%B93%E4%B8%AA%E6%9C%88%23&Refer=top) 48104
